# matcha

./: .gitignore  README.md  makefile  matcha.cabal
app/: Main.hs
src/: .Lib.hs.swp  Lib.hs
src/Matcha/: AbstractTree.hs  Dot.hs  Operator.hs  Parser.hs
test/: Spec.hs
