name:                matcha
version:             0.1.0.0
synopsis:            language with type inference and macros
description:         Please see README.md
homepage:            https://github.com/charlesetc/matcha#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Chamberlain
maintainer:          charlespipin@gmail.com
copyright:           2016 Charles Chamberlain
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Matcha.Parser
                     , Matcha.AbstractTree
                     , Matcha.Dot
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable matcha
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matcha
                     , parsec
  default-language:    Haskell2010

test-suite matcha-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matcha
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/matcha
